# backend/controllers/einvoice.js
@@ -4,8 +4,8 @@ import dotenv from "dotenv"
 
 dotenv.config();
 
-export const getEinvoice = async (req, res, next) => {
-    
+export const getHeaders = async (req, res, next) => {
+
     const { startDate, endDate, cardNo, cardEncrypt } = req.query;
     const version = 0.5;
     const cardType = "3J0002";
@@ -15,7 +15,7 @@ export const getEinvoice = async (req, res, next) => {
     const appID = process.env.APP_ID;
     const url = "https://api.einvoice.nat.gov.tw/PB2CAPIVAN/invServ/InvServ";
 
-    //先查詢載具發票表頭
+    //查詢載具發票表頭
 
     await axios({
         method: 'post',
@@ -38,51 +38,67 @@ export const getEinvoice = async (req, res, next) => {
             'content-type': 'application/x-www-form-urlencoded;charset=utf-8'
         }
     }).then( async result => {
-        console.log(result.data);
+        var response = {
+            success: true,
+            message: "取得載具發票表頭資料成功",
+            data: {
+                headers: result.data
+            }
+        };
+        console.log(response);
+        res.status(201).json(response);
+    }).catch(err => {
+        var response = {
+            success: false,
+            message: "取得載具發票表頭失敗 error: " + err.message,
+            data: {}
+        };
+        console.error(response);
+        res.status(400).json(response);
+    })
+}
+
+
+export const getDetails = async (req, res, next) => {
+
+    const { cardNo, cardEncrypt, invNum, year, month, date } = req.query;
+
+    const version = 0.5;
+    const cardType = "3J0002";
+    const expTimeStamp = 2147483647;
+    const uuid = process.env.UUID;
+    const appID = process.env.APP_ID;
+    const url = "https://api.einvoice.nat.gov.tw/PB2CAPIVAN/invServ/InvServ";
+    
+    var queryYear = (Number(year)+1911).toString();
+    var queryMonth = (Number(month) < 10) ? '0' + month : month;
+    var queryDate = (Number(date) < 10) ? '0' + date : date;
+    var invDate = queryYear+'/'+queryMonth+'/'+queryDate;
+
+    await axios({
+        method: 'post',
+        url: url,
+        data: qs.stringify({
+            action: "carrierInvDetail",
+            appID: appID,
+            cardEncrypt: cardEncrypt,
+            cardNo: cardNo,
+            cardType: cardType,
+            expTimeStamp: expTimeStamp,
+            invDate: invDate,
+            invNum: invNum,
+            timeStamp: Math.floor(Date.now()/1000)+100, // suggested to add timestamp from 10 to 180
+            uuid: uuid,
+            version: version
+        }),
+        headers: {
+            'content-type': 'application/x-www-form-urlencoded;charset=utf-8'
+        }
+    }).then(result => {
         var response = {
             success: true,
             message: "取得載具發票明細資料成功",
-            data: {
-                headers: []
-            }
-        };
-        // 將收到的result.data.details[i].invNum用以查詢發票明細
-        var headers = result.data.details;
-
-        for(let i = 0; i < headers.length; ++i) {
-            // transform date format
-            var year = (Number(headers[i].invDate.year)+1911).toString();
-            var month = (Number(headers[i].invDate.month) < 10) ?
-                '0'+headers[i].invDate.month :
-                headers[i].invDate.month;
-            var date = (Number(headers[i].invDate.date) < 10) ?
-                '0'+headers[i].invDate.date :
-                headers[i].invDate.date;
-            var invDate = year+'/'+month+'/'+date;
-
-            await axios({
-                method: 'post',
-                url: url,
-                data: qs.stringify({
-                    action: "carrierInvDetail",
-                    appID: appID,
-                    cardEncrypt: cardEncrypt,
-                    cardNo: cardNo,
-                    cardType: cardType,
-                    expTimeStamp: expTimeStamp,
-                    invDate: invDate,
-                    invNum: headers[i].invNum,
-                    timeStamp: Math.floor(Date.now()/1000)+100, // suggested to add timestamp from 10 to 180
-                    uuid: uuid,
-                    version: version
-                }),
-                headers: {
-                    'content-type': 'application/x-www-form-urlencoded;charset=utf-8'
-                }
-            }).then(result => {
-                console.log(result.data);
-                response.data.headers.push(result.data);
-            }).catch(err => { throw err; })
+            data: result.data
         }
         console.log(response);
         res.status(201).json(response);
