# backend/routes/einvoice.js
@@ -1,10 +1,11 @@
 import express from "express";
 import auth from "../middleware/auth.js";
-import { getEinvoice } from "../controllers/einvoice.js";
-import { getEinvoice_check } from "../object/einvoice.js";
+import { getHeaders, getDetails } from "../controllers/einvoice.js";
+import { getHeaders_check, getDetails_check } from "../object/einvoice.js";
 
 const router = express.Router();
 
-router.get("/", [auth, getEinvoice_check], getEinvoice);
+router.get("/headers", [auth, getHeaders_check], getHeaders);
+router.get("/details", [auth, getDetails_check], getDetails);
 
 export default router;
